syntax = "proto3";

option java_multiple_files = true;
option java_package = "by.dzimash.service";
option java_outer_classname = "NumberServiceProto";

package numbers;

service NumberService {
  rpc GetNumbers (NumberRequest) returns (stream NumberResponse) {}
}

message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 number = 1;
}
